[WebSocket] ExtensionParser should have its own file https://bugs.webkit.org/show_bug.cgi?id=98475

Reviewed by Yuta Kitamura.

Source/WebCore:

Factor out ExtensionParser from WebSocketExtensionDispatcher and rename it as WebSocketExtensionParser.
WebSocketExtensionParser has its own file.

No changes in behavior. Added a test case for parsing Sec-WebSocket-Extensions field as a chromium unit test.

* CMakeLists.txt: Added WebSocketExtensionParser.
* GNUmakefile.list.am: Ditto.
* Modules/websockets/WebSocketExtensionDispatcher.cpp:
(WebCore::WebSocketExtensionDispatcher::processHeaderValue):
Use WebSocketExtensionParser::parseExtension() to parser extension header value.
* Modules/websockets/WebSocketExtensionParser.cpp: Added.
(WebCore):
(WebCore::WebSocketExtensionParser::finished): Moved from ExtensionParser.
(WebCore::WebSocketExtensionParser::parsedSuccessfully): Ditto.
(WebCore::isSeparator): Ditto.
(WebCore::WebSocketExtensionParser::skipSpaces): Ditto.
(WebCore::WebSocketExtensionParser::consumeToken): Ditto.
(WebCore::WebSocketExtensionParser::consumeQuotedString): Ditto.
(WebCore::WebSocketExtensionParser::consumeQuotedStringOrToken): Ditto.
(WebCore::WebSocketExtensionParser::consumeCharacter): Ditto.
(WebCore::WebSocketExtensionParser::parseExtension): Moved from WebSocketExtensionDispatcher.
* Modules/websockets/WebSocketExtensionParser.h: Added.
(WebCore):
(WebSocketExtensionParser):
(WebCore::WebSocketExtensionParser::WebSocketExtensionParser):
(WebCore::WebSocketExtensionParser::currentToken):
* Target.pri: Added WebSocketExtensionParser.
* WebCore.gypi: Ditto.
* WebCore.vcproj/WebCore.vcproj: Ditto.
* WebCore.xcodeproj/project.pbxproj: Ditto.

Source/WebKit/chromium:

Add a test for parsing Sec-WebSocket-Extensions field.

* tests/WebSocketExtensionDispatcherTest.cpp:
(WebCore):
(WebCore::TEST_F):


Canonical link: https://commits.webkit.org/116465@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@130471 268f45cc-cd09-0410-ab3c-d52691b4dbfc