Source/WebCore/WebCore.gypi
@@ -1827,6 +1827,8 @@
             'Modules/websockets/WebSocketExtensionDispatcher.cpp',
             'Modules/websockets/WebSocketExtensionDispatcher.h',
             'Modules/websockets/WebSocketExtensionProcessor.h',
+            'Modules/websockets/WebSocketExtensionParser.cpp',
+            'Modules/websockets/WebSocketExtensionParser.h',
             'Modules/websockets/WebSocketFrame.cpp',
             'Modules/websockets/WebSocketFrame.h',
             'Modules/websockets/WebSocketHandshake.cpp',
